# joao_site

./: README.md  pyproject.toml
joao_site/: app.py  produtos.py
joao_site/static/css/: styles.css
joao_site/templates/: base.html  index.html  produto.html  produtos.html
pipboy_store/: app.py  produtos.csv
pipboy_store/static/css/: styles.css
pipboy_store/templates/: base.html  cadastro.html  cnpj-gerador.html  cnpj-validar.html  cpf-gerador.html  cpf-validar.html  index.html  produtos.html
